crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__raise.py_1.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     raise "a glass!"

flowchart TD
  start(("Start"))
  return(("End"))
  block0["raise #quot;a glass!#quot;\n"]

  start --> block0
  block0 --> return

