crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__simple.py_2.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     return

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return\n"]

  start --> block0
  block0 --> return

