crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__simple.py_3.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     return 1

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return 1\n"]

  start --> block0
  block0 --> return

