crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__simple.py_6.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     i = 0
%%     i += 2
%%     return i

flowchart TD
  start(("Start"))
  return(("End"))
  block0["i = 0\ni += 2\nreturn i\n"]

  start --> block0
  block0 --> return

