crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__while.py_0.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     while False:
%%         return "unreachable"
%%     return 1

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return 1\n"]
  block1["return #quot;unreachable#quot;\n"]
  block2["while False:
        return #quot;unreachable#quot;\n"]

  start --> block2
  block2 -- "False" --> block1
  block2 -- "else" --> block0
  block1 --> return
  block0 --> return

